Implement all tests.  Get rid of tons of logs.  Use Collections.unmodifiableList() whenever possible.  Revert temp change with stubbed version.